--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
         <!--nav-main-->
         <nav class="nav-main">
-            <img src="img/brand.png" alt="Technews LOGO" class="nav-brand">
+            <img src="img/brand.png" alt="Technews LOGOS" class="nav-brand">
             <ul class="nav-menu show">
                 <li>
                     <a href="#">Web Development</a>
