--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="#">Blockchain</a>
                 </li>
                 <li>
-                    <a href="#">Artificial Intelligences</a>
+                    <a href="#">Artificial Intelligence</a>
                 </li>
                 <li>
                     <a href="#">Machine learning</a>
