--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div>
                 <img src="./img/news1.jpg" alt="news 1">
                 <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earum dlaudantium consequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earumv dlaudantium consequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
             <div>
