--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#">Web Developments</a>
                 </li>
                 <li>
-                    <a href="#">Blockchain</a>
+                    <a href="#">Blockchains</a>
                 </li>
                 <li>
                     <a href="#">Artificial Intelligence</a>
