--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="img/brand.png" alt="Technews LOGOS" class="nav-brand">
             <ul class="nav-menu show">
                 <li>
-                    <a href="#">Web Developments</a>
+                    <a href="#">Web Development</a>
                 </li>
                 <li>
                     <a href="#">Blockchains</a>
