--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="news-cards">
             <div>
                 <img src="./img/news1.jpg" alt="news 1">
-                <h3>Lorem, ipsum dolor.</h3>
+                <h3>Lorem, ipsumf dolor.</h3>
                 <p>Lorem ipsum doglor sit amet, consectetur adipisicing elit. Sit earumv dlaudantium consequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
