--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ B<!DOCTYPE html>
         <section class="cards-banner-one">
             <div class="content">
                 <h2>Lorem, ipsum dolor.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam ad assumenda iure quod. Voluptates rerum sint dignissimos repudiandae, quidem ducimus.</p>
+                <p>Lorem ipsum dolor sit amet, consectetvur adipisicing elit. Laboriosam ad assumenda iure quod. Voluptates rerum sint dignissimos repudiandae, quidem ducimus.</p>
                 <a href="#" class="btm">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
         </section>
