--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ B<!DOCTYPE html>
 
         <!--SHOWCASE-->
         <header class="showcase">
-            <h2>Big News TOday</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem alias tempora recusandae, nulla natus, hic corrupti earum sapiente nihil aperiam impedit doloribus quod? Enim, tempora magnam sapiente perspiciatis natus porro!</p>
+            <h2>Big News Today</h2>
+            <p>Lorem pablo ipsum dolor, sit amet consectetur adipisicing elit. Autem alias tempora recusandae, nulla natus, hic corrupti earum sapiente nihil aperiam impedit doloribus quod? Enim, tempora magnam sapiente perspiciatis natus porro!</p>
             <a href="#" class="btm">Read More <i class="fas fa-angle-double-right"></i></a>
         </header>
         <!--Newscards-->
