--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+GT<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -103,7 +103,7 @@
             <div>
                 <img src="./img/news1.jpg" alt="news 1">
                 <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earum laudantium consequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earum laudanthium consequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
             <div>
