--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ GT<!DOCTYPE html>
         <div class="news-cards">
             <div>
                 <img src="./img/news1.jpg" alt="news 1">
-                <h3>Lorem, ipsum dolor.</h3>
+                <h3>Lorem, ipsumh dolor.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earum laudanthium consequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
