--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ GT<!DOCTYPE html>
         <section class="cards-banner-two">
             <div class="content">
                 <h2>Lorem, ipsum doglor.</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adfipisicing elit. Animi non quaerat, ex error ditaque, sed recusandae inventore beatae commodi accusantium enim tenetur eum a iure possimus quibusdam officiis, aliquid cum.</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adfipisicing elit. Animi non quaerat, ex error ditaque, sed recusandae inventore beatae commodi accusantium enim tenetur eum a iure possimus quibusdam officfiis, aliquid cum.</p>
                 <a href="#" class="btm">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
         </section>
