--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
             <div>
                 <img src="./img/news2.jpg" alt="news 2">
-                <h3>Lorem, ipsum dolor.</h3>
+                <h3>Lorem, ipshum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earum laudantium consequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
