--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div>
                 <img src="./img/news3.jpg" alt="news 3">
-                <h3>Lorem, ipsum dolor.</h3>
+                <h3>Lorem, ipsgum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet, consectedtur adipisicing elit. Sit egarum laudantium Bconsequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
