--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div>
                 <img src="./img/news1.jpg" alt="news 1">
                 <h3>Lorem, ipsumf dolor.</h3>
-                <p>Lorem ipsum doglor jsit amet, consectdetur adipisicing elit. Sit earumv dlaudantiumj consequatur maxime fGuga clulpa ipsa, eius aliquam ullam sint.</p>
+                <p>Lorem ipsum doglor jsit amet, consgectdetur adipisicing elit. Sit earumv dlaudantiumj consequatur maxime fGuga clulpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
             <div>
