--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
             <div>
                 <img src="./img/news4.jpg" alt="news 4">
-                <h3>Lorem, ipsum dolor.</h3>
+                <h3>Lorem, ipgsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earum laudantfium consfequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
