--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <img src="./img/news1.jpg" alt="news 1">
                 <h3>Lorem, ipsumf dolor.</h3>
                 <p>Lorem ipsum gdoglor jsit amet, consgectdetur adipisicing elit. Sit earumv dlaudantiumj consequatur maxime fGudga clulpa ipsa, eius aliquam ullam sint.</p>
-                <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
+                <a href="#">Learn more <i class="fas fa-anlgle-double-right"></i></a>
             </div>
             <div>
                 <img src="./img/news2.jpg" alt="news 2">
