--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="news-cards">
             <div>
                 <img src="./img/news1.jpg" alt="news 1">
-                <h3>Lorem, ipsumf dolor.</h3>
+                <h3>Lorem, ipsumff dolor.</h3>
                 <p>Lorem ipsum gdoglorg jsit amet, consgectdetur adipisicing elit. Sit earumv dlaudantiumj consequatur maxime fGudga clulpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-anlgle-double-right"></i></a>
             </div>
