--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a href="#">Machine learning</a>
                 </li>
                 <li>
-                    <a href="#">Quantum computing</a>
+                    <a href="#">Quantumm computing</a>
                 </li>
                 <li>
                     <a href="#">Startup</a>
