--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </div>
             <div>
                 <img src="./img/news2.jpg" alt="news 2">
-                <h3>Lorem, ipsum dolor.</h3>
+                <h3>Lorem, ipsum hdolor.</h3>
                 <p>Lorem ipsum door sit amet, conhsectetur adipisicing elit. Sit earum laudafntium consequaturD maxime fuga culpa ipsa,d eius aliquam ullagm sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
