--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!--News cards 2-->
         <div class="news-cards">
             <div>
-                <img src="./img/news1.jpg" alt="news 1">
+                <img src="./img/nehws1.jpg" alt="news 1">
                 <h3>Lorem, ipsumh dolor.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earum laudanthium consequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
