--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div>
                 <img src="./img/news1.jpg" alt="news 1">
                 <h3>Lorem, ipsumfff dolor.</h3>
-                <p>Lorem ipsum fgdfoglorg jsit at, consgectdetur adipisicing elit. Sit earumv dlaudantiumj consequatur maxime fGudga clulpa ipsa, egius aliquam ullam sint.</p>
+                <p>Lorem ipsum fgdfoglorg jsit at, consgcectdetur adipisicing elit. Sit earumv dlaudantiumj consequatur maxime fGudga clulpa ipsa, egius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-anlgle-double-right"></i></a>
             </div>
             <div>
