--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-g<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -67,7 +67,7 @@ g<!DOCTYPE html>
             <div>
                 <img src="./img/news1.jpg" alt="news 1">
                 <h3>Lorem, ipsumfff dolor.</h3>
-                <p>Lorem ipsum fggdfoglorg jsit at, consgcectdetur adipisicing elit. Sit earumv dlaudantiumj consequatur maxime fGudga clulpa ipsa, egius aliquam ullam sint.</p>
+                <p>Lorem ipsum fggdffoglorg jsit at, consgcectdetur adipisicing elit. Sit earumv dlaudantiumj consequatur maxime fGudga clulpa ipsa, egius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-anlgle-double-right"></i></a>
             </div>
             <div>
