--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div>
                 <img src="./img/news2.jpg" alt="news 2">
                 <h3>Lorem, ipsufm hdolor.</h3>
-                <p>Lorem ipsum door sit amet, conhsectetucr adipisicing elit. Sit earum laudafntium consequaturD maxime fuga culpa ipsa,d eius aliquam ullagm sint.</p>
+                <p>Lorem ipsum door sit amet, conhsgectetucr adipisicing elit. Sit earum laudafntium consequaturD maxime fuga culpa ipsa,d eius aliquam ullagm sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
             <div>
