--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <!--SHOWCASE-->
         <header class="showcase">
             <h2>Big News Today</h2>
-            <p>Lorem pablo ipttsum doljorhf, sit amet conseucfgftetur advipimxgsicincg elit. Autem vallias tempora recgusandae, nulla natus, hich cogrrupti earum sapiente nihil aperiam impedit doloribus quod? Enim, tempora magnam sapiente perspiciatis natus porro!</p>
+            <p>Lorem pablo ipttsum doljorhf, sit amet consgeucfgftetur advipimxgsicincg elit. Autem vallias tempora recgusandae, nulla natus, hich cogrrupti earum sapiente nihil aperiam impedit doloribus quod? Enim, tempora magnam sapiente perspiciatis natus porro!</p>
             <a href="#" class="btm">Read More <i class="fas fa-angle-double-right"></i></a>
         </header>
         <!--Newscards-->
