--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div>
                 <img src="./img/20180112_231100.jpg" alt="news 4">
                 <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earum laudantiuvm consequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adigfvpisicing elit. Sit earum laudantiuvm consequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
             
