--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div>
                 <img src="./img/news4.jpg" alt="news 4">
                 <h3>Lorem, ipgsum dolor.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earum laudantfiulm consfequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit earum laudantfiulm codnsfequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
             
