--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <section class="cards-banner-one">
             <div class="content">
                 <h2>Lorem, ipsum dolor.</h2>
-                <p>Lorem ipsum dolorg sit amet, consectetvur adipisicing elit. Laboriosamh ad assuend iures quod. Voluptates rerum sint dignissimos repudiandae, quidem ducimus.</p>
+                <p>Lorem ipsum dolorg sit amet, consectetvur adipisicing elit. Laboamh ad assuend iures quod. Voluptates rerum sint dignissimos repudiandae, quidem ducimus.</p>
                 <a href="#" class="btm">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
         </section>
