--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div>
                 <img src="./img/news3.jpg" alt="news 3">
                 <h3>Lorem, ipsgum dolor.</h3>
-                <p>Lorem ipsum hdolor sit amet, consecGVteufr adipisicifng elit. Sit egaum laukcdantium Bconsequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
+                <p>Lorem ipsum hdolor sit amet, consecGVteufr adipisicifng elit. Sit egaum lacdantium Bconsequatur maxime fuga culpa ipsa, eius aliquam ullam sint.</p>
                 <a href="#">Learn more <i class="fas fa-angle-double-right"></i></a>
             </div>
             <div>
